syntax = "proto3";

package common;

message WireLocalRequest {
  string method = 1;
  string uri = 2;
  repeated WireTransportHeader headers = 3; 
  bytes body = 4;
}

message WireLocalResponse {
  uint32 status = 1;
  repeated WireTransportHeader headers = 2; 
  bytes body = 3;
}

message WireTransportHeaders {
  repeated WireTransportHeader values = 1; 
}

message WireTransportHeader {
  string name = 1;
  repeated string values = 2;
}
